# icepack-thesis

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: icepack-config.cmake
doc/: CMakeLists.txt  Doxyfile.in  main.md
doc/headers/: assembly.hpp  field.hpp  icepack.hpp  numerics.hpp  physics.hpp
include/icepack/: assembly.hpp  discretization.hpp  field.hpp  grid_data.hpp  mesh.hpp  utilities.hpp
include/icepack/inverse/: error_functionals.hpp
include/icepack/numerics/: convergence_log.hpp  optimization.hpp  sequence.hpp
include/icepack/physics/: constants.hpp  friction.hpp  ice_shelf.hpp  ice_stream.hpp  mass_transport.hpp  ssa.hpp  viscosity.hpp
src/: CMakeLists.txt  discretization.cpp  field.cpp  grid_data.cpp  mesh.cpp  utilities.cpp
src/inverse/: error_functionals.cpp
src/numerics/: convergence_log.cpp
src/physics/: friction.cpp  ice_shelf.cpp  ice_stream.cpp  mass_transport.cpp  ssa.cpp  viscosity.cpp
test/: CMakeLists.txt  assembly.cpp  convergence_log.cpp  discretization.cpp  error_functionals.cpp  field.cpp  friction.cpp  grid_data.cpp  ice_shelf.cpp  ice_shelf_coupled.cpp  ice_shelf_inverse.cpp  ice_stream.cpp  ice_stream_coupled.cpp  mass_transport.cpp  optimization.cpp  read_msh.cpp  ssa.cpp  testing.cpp  testing.hpp  viscosity.cpp
